OP-1385 Fixed spacing to left of menu

--- a/web-app/themes/common/stylesheets/admin/_applicationConfiguration.scss
+++ b/web-app/themes/common/stylesheets/admin/_applicationConfiguration.scss
@@ -207,7 +207,7 @@ div.app_config_map_row{
 
 body.configuration_widget {
     width: 1000px;
-    margin: auto;
+    margin: auto auto auto 2%;
     background-color: #0f1a2e;
 
     $link-color: #77a7ef;
